- started writing the actual content of the portfolio

--- a/src/components/ContentBlock/ContentBlock.css
+++ b/src/components/ContentBlock/ContentBlock.css
@@ -6,7 +6,7 @@
 
 .header {
     display: flex;
-    background-color: darkmagenta;
+    background-color: purple;
     border-radius: 5px;
     padding:5px;
     margin: 5px 0 5px 0;
